@@ -50,11 +50,11 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   db18b5bc0eea58053df8775b1c0522e12751c128 2013090900 mingw32-mpc.xml
   e3b21976e887e91c159816ae10468bba2950cc6a 2013090900 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013091500 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013091501 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
-  c7d47eb5a8ebeb919ed4ce903c556b78bd80b958 2013091400 mingw32-runtime.xml
+  ff9cd66a735943aa8ad2ab42804661d24ae70acb 2013091500 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   2e333531ebfa553a2e96b2ed848e4c7bb28a2aca 2013090900 mingw32-zlib.xml
